2008-02-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c:
	support options -b, --nocolor
	remove options -s, --saypipe

	* avatarsay.c (check_encoding, getwline):
	don't remove byte order marks, but ignore them while reading

	* avatarsay.c (process_file):
	skip lines "@echo off" through "exit" (for Windows/ReactOS)

	* avatar.c (avt_say, avt_say_len, backspace_trick):
	support backspace trick for underlining and bold printing

	* avatar.c:
	no text-delay as default

	* avatar-audio.c (short_audio_sound):
	avoid sound to interrupt itself or other sounds
	
        * avatar.c (text_background_color):
	new variable

	* avatar.c (avt_drawchar):
	optimized, support for bold and underline

	* akfavatar.h, avatar.c (avt_bold, avt_get_bold):
	new functions

	* akfavatar.h, avatar.c (avt_underlined, avt_get_underlined):
	new functions

	* akfavatar.h, avatar.c (AVT_MAKE_BOOL):
	new makro

	* akfavatar.h, avatar.c (avt_get_menu):
	new function

	* akfavatar.h, avatar.c (avt_next_tab, avt_last_tab)
	  (avt_clear_tab_stops, avt_set_tab):
	new functions

	* avatar.c (avt_next_tab, avt_reset_tab_stops):
	new tab handling

	* avatarsay.c (check_config_file):
	new function
	config file: /etc/avatarsay

	* akfavatar.h, avatar.c (avt_activate_cursor):
	new function
	support for text-cursor

	* akfavatar.h, avatar.c (avt_set_origin_mode, avt_get_origin_mode):
	new functions

	* avatar.c (avt_initialize):
	enable key repeat mode

	* akfavatar.h, avatar.c (avt_clear_bol, avt_clear_line):
	(avt_clear_up, avt_clear_down):
	new functions

	* avatar.c (avt_put_character):
	interprets cariage return

	* akfavatar.h, avatar.c (avt_put_character, avt_mb_encode):
	new functions

	* avatarsay.c:
	ability to run lineoriented programs (not for Windows)
	program has a main menu now
	code cleanups and reorganizations
	fix: rawmode (fixes bug #21889)
	(checkoptions): sanity checks
	(execute_process): no blocking, while program outputs nothing

	* akfavatar.h: