@@ -1,4 +1,8 @@
-2008-02-25  Andreas K. Foerster  <info@akfoerster.de>
+2008-02-26  Andreas K. Foerster  <info@akfoerster.de>
+
+	* akfavatar.h, avatar.c (avt_reserve_single_keys):
+	new function
+	(avt_stop_on_esc): removed
 
 	* avatarsay.c:
 	support options -b, --nocolor
